--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,18 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL Shortner</title>
+    <style>
+     
+     
+    </style>
   </head>
   <body>
     <div class="container">
-      <h1>URL shortner Project</h1>
-      <form>
-        <label>Enter Long URL:</label>
+      <h1>URL Shortener Project</h1>
+      <form action="/short" method="POST">
+        <label for="longUrl">Enter long URL:</label>
         <input type="text" id="longUrl" name="longUrl" required />
-        <button type="submit">Shortner</button>
+        <button type="submit">Shorten</button>
       </form>
       <% if(shortUrl) { %>
       <p>
-        Short URL :- <a href="<%= shortUrl %>" target="_blank"></a>
+        Short URL :- <a href="<%= shortUrl %>" target="_blank" />
         <%= shortUrl %>
       </p>
       <% } %>
